--- a/frontend/gdp-app/src/app/shared/components/navigation-bar/navigation-bar.html
+++ b/frontend/gdp-app/src/app/shared/components/navigation-bar/navigation-bar.html
@@ -1,1 +1,7 @@
-<p-menubar [model]="items" />
+<p-menubar [style]="{ background: '#003399', color: 'white' }" [model]="items">
+  <div class="p-menubar-start">
+    <img src="/eu-flag.svg" width="24" class="mr-2" alt="EU Flag" />
+    <span class="header-title">EU GDP Dashboard</span>
+  </div>
+</p-menubar>
+<br />
