--- a/frontend/gdp-app/src/styles.scss
+++ b/frontend/gdp-app/src/styles.scss
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
+body {
+  background-color: #F7F9FC;
+  font-family: 'Segoe UI', Roboto, sans-serif;
+}
